--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -1,21 +1,22 @@
 <h1 class='center'>Jeux</h1>
 
 
-<div class="ui-grid">
+<p-table [columns]="cols" [value]="jeux">
+  <ng-template pTemplate="header" let-columns>
+    <tr>
+      <th *ngFor="let col of columns">
+        {{col.header}}
+      </th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-rowData let-columns="columns">
+    <tr>
+      <td *ngFor="let col of columns">
+        {{rowData[col.field]}}
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
 
 
-  <div *ngFor='let jeu of jeux' class="ui-grid-col-4">
-      <p-card header="{{jeu.nom}}" subheader="{{jeu.theme}}" [style]="{width: '360px'}" styleClass="p-card-shadow">
-        <ng-template pTemplate="header">
-          <img alt="Card" src="{{jeu.url_media}}">
-        </ng-template>
-        <p>{{jeu.description}}</p>
-        <ng-template pTemplate="footer">
-
-        </ng-template>
-      </p-card>
-
-  </div>
-
-</div>
 
