--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,3 +7,8 @@
   <p>Crée : {{user.created_at | amDateFormat:'LL'}} </p>
   <p>Modifié : {{user.updated_at | amDateFormat:'LL'}} </p>
 </div>
+
+
+<button pButton pRipple type="button" label="Editer mon profil" routerLink="edit" routerLinkActive="active" style="width:20rem" class="p-mr-2 p-mb-2"></button>
+
+
