--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -17,6 +17,6 @@
     </tr>
   </ng-template>
 </p-table>
-
+<button type="button" pButton pRipple icon="pi pi-search" [routerLink]="['/creer']">Créer un jeu</button>
 
 
