--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -4,19 +4,22 @@
   <i class="pi {{iconTriName}}"></i> Tri par nom</button>
 <button style="margin:20px " mat-raised-button (click)="modifTriNote()">
   <i class="pi {{iconTriNote}}"></i> Tri par note</button>
-<p-table [columns]="cols" [value]="jeux">
-  <ng-template pTemplate="header" let-columns>
+<p-table [value]="jeux | async">
+  <ng-template pTemplate="header">
     <tr>
-      <th *ngFor="let col of columns">
-        {{col.header}}
-      </th>
+      <th>Identifiant</th>
+      <th>Nom</th>
+      <th>Nombre joueur</th>
+      <th>Durée</th>
     </tr>
   </ng-template>
-  <ng-template pTemplate="body" let-rowData let-columns="columns">
+  <ng-template pTemplate="body" let-jeu>
     <tr>
-      <td *ngFor="let col of columns">
-        {{rowData[col.field]}}
-      </td>
+      <td>{{jeu.id}}</td>
+      <td>{{jeu.nom}}</td>
+      <td>{{jeu.nombre_joueurs}}</td>
+      <td>{{jeu.duree}}</td>
+      <button type="button" pButton pRipple icon="pi pi-search" [routerLink]="['/jeux', jeu.id]"></button>
     </tr>
   </ng-template>
 </p-table>
