--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -4,13 +4,14 @@
   <i class="pi {{iconTriName}}"></i> Tri par nom</button>
 <button style="margin:20px " mat-raised-button (click)="modifTriNote()">
   <i class="pi {{iconTriNote}}"></i> Tri par note</button>
-<p-table [value]="jeux | async">
+<p-table [value]="jeux$ | async">
   <ng-template pTemplate="header">
     <tr>
       <th>Identifiant</th>
       <th>Nom</th>
       <th>Nombre joueur</th>
       <th>Durée</th>
+      <th>Détails</th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-jeu>
@@ -19,7 +20,7 @@
       <td>{{jeu.nom}}</td>
       <td>{{jeu.nombre_joueurs}}</td>
       <td>{{jeu.duree}}</td>
-      <button type="button" pButton pRipple icon="pi pi-search" [routerLink]="['/jeux', jeu.id]"></button>
+      <td><button type="button" pButton pRipple icon="pi pi-exclamation-circle" [routerLink]="['/jeux', jeu.id]"></button></td>
     </tr>
   </ng-template>
 </p-table>
