--- a/src/app/profil-edit/profil-edit.component.html
+++ b/src/app/profil-edit/profil-edit.component.html
@@ -1,30 +1,27 @@
-
+<h2 class="p-text-center"> Modification de votre profil </h2>
 <form [formGroup]="formulaire" (ngSubmit)="onSubmit()">
   <div class="p-fluid">
     <div class="p-field">
-      <label for="nom">Nom</label>
-      <input id="nom" type="text" pInputText>
-      <div *ngIf="nom.invalid && (nom.dirty || nom.touched)" class="mat-error">
-        <div *ngIf="nom?.errors.required" style="color:crimson">Le nom est obligatoire</div>
-        <div *ngIf="nom?.errors.pattern"  style="color: crimson">Le nom doit comporter au moins deux caractères</div>
+      <input id="nom" type="text" pInputText formControlName="nom" placeholder="Veuillez saisir votre nom">
+      <div *ngIf="nom.invalid && (nom.dirty || nom.touched)" class="invalid-feedback">
+        <div *ngIf="nom.errors.required" style="color:#ee7f01">Le nom est obligatoire</div>
+        <div *ngIf="nom.errors.minlength"  style="color:#ee7f01">Le nom doit comporter au moins deux caractères</div>
       </div>
     </div>
     <div class="p-field">
-      <label for="prenom">Prénom</label>
-      <input id="prenom" type="text" pInputText>
-      <div *ngIf="prenom.invalid && (prenom.dirty || prenom.touched)" class="mat-error">
-        <div *ngIf="prenom?.errors.required" style="color:crimson">Le prénom est obligatoire</div>
-        <div *ngIf="prenom?.errors.pattern"  style="color: crimson">Le prénom doit comporter au moins deux caractères</div>
+      <input id="prenom" type="text" pInputText formControlName="prenom" placeholder="Veuillez saisir votre prénom">
+      <div *ngIf="prenom.invalid && (prenom.dirty || prenom.touched)" class="invalid-feedback">
+        <div *ngIf="prenom.errors.required" style="color:#ee7f01">Le prénom est obligatoire</div>
+        <div *ngIf="prenom.errors.minlength"  style="color:#ee7f01">Le prénom doit comporter au moins deux caractères</div>
       </div>
     </div>
     <div class="p-field">
-      <label for="mail">Adresse mail</label>
-      <input id="mail" type="text" pInputText>
-      <div *ngIf="mail.invalid && (mail.dirty || mail.touched)" class="mat-error">
-        <div *ngIf="mail?.errors.required" style="color:crimson">L'adresse email est obligatoire</div>
-        <div *ngIf="mail?.errors.pattern"  style="color: crimson">L'adresse email doit comporter le sigle @ </div>
+      <input id="email" type="text" pInputText formControlName="email" placeholder="Veuillez saisir votre nouvelle adresse mail">
+      <div *ngIf="email.invalid && (email.dirty || email.touched)" class="invalid-feedback">
+        <div *ngIf="email.errors.required" style="color:#ee7f01">L'adresse email est obligatoire</div>
+        <div *ngIf="email.errors.email" style="color:#ee7f01"> L'adresse email n'a pas le bon format </div>
       </div>
     </div>
   </div>
-  <button pButton type="submit" label="Valider" [disabled]="!formulaire.valid"></button>
+  <button id="button" [disabled]="!formulaire.valid">Valider</button>
 </form>
