--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,3 +1,15 @@
 body {
   padding: 30px;
 }
+
+#button{
+  background-color: #f7ba2a;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  border-radius: 10px;
+}
