Modification de la mise en forme et ajout d'un bouton home dans la navigation bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<p-menubar [model]="items">
+<p-menubar [model]="items" [style]="{'background-color':'#f7ba2a'}">
 </p-menubar>
 
 <!--
@@ -15,4 +15,4 @@
 
 <p-toast position="top-right" key="main"></p-toast>
 
-<button (click)="show()">test</button>
+
