--- a/src/app/detail-jeu/detail-jeu.component.html
+++ b/src/app/detail-jeu/detail-jeu.component.html
@@ -15,4 +15,31 @@
   <ng-template pTemplate="footer">
   </ng-template>
 </p-card>
+<button pButton type="button" icon="pi pi-check" iconPos="left" (click)="TriDateComm(jeux.commentaires)"></button>
+<p-table>
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Identifiant commentaire</th>
+      <th>Commentaire</th>
+      <th>Date commentaire</th>
+      <th>note</th>
+      <th>Identifiant Utilisateur</th>
+      <th>Modification</th>
+    </tr>
+  </ng-template>
+  </p-table>
+  <div *ngFor="let comm of jeux.commentaires">
+    <p-table>
+      <ng-template pTemplate="footer">
+        <tr>
+          <td>{{comm.id}}</td>
+          <td>{{comm.commentaire}}</td>
+          <td>{{comm.date_com | date:'dd.MM.yyyy H:mm'}}</td>
+          <td>{{comm.note}}</td>
+          <td>{{comm.user_id}}</td>
+          <td><button pButton type="button" icon="pi pi-user-edit" iconPos="left" (click)="Modifier(comm)"></button></td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 
