Ajout du contenu

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,6 +5,7 @@
     Votre adresse email est {{user.email}} <br/>
     Votre prénom est {{user.prenom}} <br/>
     Votre nom est {{user.nom}} <br/>
+    Votre pseudo est {{user.pseudo}} <br/>
   </p-fieldset>
   <br/>
   <p-fieldset legend="À savoir">
