--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<p-menubar [model]="items" [style]="{'background-color':'#f7ba2a'}">
+<p-menubar [model]="items" [style]="{'background-color':'#f7ba2a', 'margin-bottom':'2em'}">
 </p-menubar>
 
 <!--
@@ -14,3 +14,7 @@
 <router-outlet></router-outlet>
 
 <p-toast position="top-right" key="main"></p-toast>
+
+<div class="footer">
+  <p><strong>Copyright ©2021 La ludothèque des gens cool | Site web du projet marathon du semestre 4</strong></p>
+</div>
