--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -41,20 +41,24 @@
 <p-table [value]="jeux$ | async">
   <ng-template pTemplate="header">
     <tr>
-      <th>Identifiant</th>
-      <th>Nom</th>
-      <th>Nombre joueur</th>
-      <th>Durée</th>
-      <th>Détails</th>
+      <th style="text-align: center">Nom</th>
+      <th style="text-align: center">Photo</th>
+      <th style="text-align: center">Thème</th>
+      <th style="text-align: center">Durée</th>
+      <th style="text-align: center">Nombre de joueurs</th>
+      <th style="text-align: center">Age minimum</th>
+      <th style="text-align: center">Détail</th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-jeu>
     <tr>
-      <td>{{jeu.id}}</td>
-      <td>{{jeu.nom}}</td>
-      <td>{{jeu.nombre_joueurs}}</td>
-      <td>{{jeu.duree}}</td>
-      <td><button type="button" pButton icon="pi pi-exclamation-circle" [routerLink]="['/jeux', jeu.id]"></button></td>
+      <td style="text-align: center"><strong>{{jeu.nom}}</strong></td>
+      <td style="text-align: center"><img src="{{jeu.url_media}}" alt="{{jeu.nom}}" width="150" height="150"></td>
+      <td style="text-align: center">{{jeu.theme_id.nom}}</td>
+      <td style="text-align: center">{{jeu.duree}}</td>
+      <td style="text-align: center">{{jeu.nombre_joueurs}}</td>
+      <td style="text-align: center">{{jeu.age}}</td>
+      <td style="text-align: center"><button type="button" pButton icon="pi pi-search" [routerLink]="['/jeux', jeu.id]" style="background-color: #f7ba2a "></button></td>
     </tr>
   </ng-template>
 </p-table>
