Créer un jeu -- En cours

--- a/src/app/creer-jeu/creer-jeu.component.html
+++ b/src/app/creer-jeu/creer-jeu.component.html
@@ -101,7 +101,6 @@
       </div>
     </div>
   </div>
-
   <div class="p-formgroup-inline">
     <div class="p-field">Mécanique
       <label for="mecanique" class="p-sr-only">Mécanique</label>
@@ -111,6 +110,6 @@
       </div>
     </div>
   </div>
-
   <button pButton type="submit" label="Valide" [disabled]="!formulaire.valid"></button>
 </form>
+<p>{{this.selectedEditeur.id}}</p>
