--- a/src/app/liste-jeu/liste-jeu.component.html
+++ b/src/app/liste-jeu/liste-jeu.component.html
@@ -48,6 +48,9 @@
       <th style="text-align: center">Nombre de joueurs</th>
       <th style="text-align: center">Age minimum</th>
       <th style="text-align: center">Détail</th>
+      <th style="text-align: center">Acheter</th>
+
+
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-jeu>
@@ -59,6 +62,8 @@
       <td style="text-align: center">{{jeu.nombre_joueurs}}</td>
       <td style="text-align: center">{{jeu.age}}</td>
       <td style="text-align: center"><button type="button" pButton icon="pi pi-search" [routerLink]="['/jeux', jeu.id]" style="background-color: #f7ba2a "></button></td>
+      <td style="text-align: center"><button type="button" pButton icon="pi pi-shopping-cart" [routerLink]="['/profile/achat', jeu.id]" style="background-color: #f7ba2a "></button></td>
+
     </tr>
   </ng-template>
 </p-table>
