Les 5 meilleur jeux -- En cours

--- a/src/app/achat-jeu/achat-jeu.component.html
+++ b/src/app/achat-jeu/achat-jeu.component.html
@@ -1,6 +1,6 @@
 <h1 style="text-align: center">Ajouter un jeu à mes achats</h1>
 
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<!--form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="p-fluid">
 
 
@@ -23,4 +23,4 @@
 
 
   </div>
-</form>
+</form-->
