Correction bouton ro

--- a/src/app/mes-jeux/mes-jeux.component.html
+++ b/src/app/mes-jeux/mes-jeux.component.html
@@ -11,6 +11,7 @@
 <p-table [value]="jeux | async">
   <ng-template pTemplate="header">
     <tr>
+      <th style="text-align: center">Validation</th>
       <th style="text-align: center">Nom</th>
       <th style="text-align: center">Photo</th>
       <th style="text-align: center">Date d'achat</th>
