--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 .footer {
-  margin-top: 8em;
-  position: fixed;
+
+  padding: 1em;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
