--- a/src/app/suppression-achat-jeu/suppression-achat-jeu.component.html
+++ b/src/app/suppression-achat-jeu/suppression-achat-jeu.component.html
@@ -1,9 +1,9 @@
-<p-dialog header="Statistiques du jeu" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw', 'background-color': '#f7ba2a'}" [baseZIndex]="10000"
+<p-dialog header="Suppression d'un jeu" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw', 'background-color': '#f7ba2a'}" [baseZIndex]="10000"
           [draggable]="false" [resizable]="false">
 
   <p class="p-m-0">Voulez vous supprimer le jeu ce jeu ?</p>
   <ng-template pTemplate="footer">
     <p-button icon="pi pi-check" (click)="onSubmit()"  label="Oui" styleClass="p-button-text"></p-button>
-    <p-button icon="pi pi-check" (click)="displayModal=false"  label="Non" styleClass="p-button-text"></p-button>
+    <p-button icon="pi pi-times" (click)="displayModal=false"  label="Non" styleClass="p-button-danger" ></p-button>
   </ng-template>
 </p-dialog>
